--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:57:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:57:55 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -232,8 +232,8 @@ E thru 17</td>
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -328,8 +328,8 @@ E (F)</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -408,8 +408,8 @@ E (F)</td>
 +1 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -550,8 +550,8 @@ E (F)</td>
 -1 thru 14</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -584,8 +584,8 @@ E thru 14</td>
 +1 thru 15</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -614,8 +614,8 @@ E thru 16</td>
 +1 thru 15</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -678,8 +678,8 @@ E thru 14</td>
 +1 thru 14</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -706,14 +706,14 @@ E thru 14</td>
 -4 thru 16</td>
       <td>Patrick Cantlay -1
 -1 thru 15</td>
+      <td>Jordan Spieth(W) +1
++1 thru 15</td>
       <td>Viktor Hovland +1
 +1 thru 15</td>
-      <td>Brooks Koepka +1
+      <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td class="greyout">Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -774,8 +774,8 @@ E thru 16</td>
 +1 thru 14</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -792,8 +792,8 @@ E thru 16</td>
 +1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -806,10 +806,10 @@ E thru 14</td>
 +1 thru 15</td>
       <td>Viktor Hovland +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Bubba Watson +1
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
+      <td class="greyout">Bubba Watson +1
 +1 (F)</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -818,12 +818,12 @@ E thru 14</td>
 -3 (F)</td>
       <td>Patrick Cantlay -1
 -1 thru 15</td>
+      <td>Jordan Spieth(W) +1
++1 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 14</td>
-      <td>Jon Rahm +1
+      <td class="greyout leftborder">Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-+2 thru 14</td>
       <td class="greyout">Sam Burns +3
 +3 thru 17</td>
     </tr>
@@ -856,8 +856,8 @@ E thru 16</td>
 +1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -870,8 +870,8 @@ E thru 16</td>
 E (F)</td>
       <td>Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
@@ -904,8 +904,8 @@ Out With Injury</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -934,8 +934,8 @@ E thru 14</td>
 +1 thru 15</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -956,6 +956,22 @@ E thru 14</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">1</td>
+      <td>Will Zalatoris -2
+-2 thru 16</td>
+      <td>Viktor Hovland +1
++1 thru 15</td>
+      <td>Jon Rahm +1
++1 thru 15</td>
+      <td>Jordan Spieth +1
++1 thru 15</td>
+      <td class="greyout leftborder">Sam Burns +3
++3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">1</td>
       <td>Patrick Cantlay -1
@@ -966,8 +982,8 @@ E thru 16</td>
 +1 thru 14</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -982,8 +998,8 @@ E (F)</td>
 +1 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -998,8 +1014,8 @@ E (F)</td>
 +1 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1020,22 +1036,6 @@ E thru 14</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -2
--2 thru 16</td>
-      <td>Viktor Hovland +1
-+1 thru 15</td>
-      <td>Jon Rahm +1
-+1 thru 15</td>
-      <td>Jordan Spieth +2
-+2 thru 14</td>
-      <td class="greyout leftborder">Sam Burns +3
-+3 thru 17</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">3</td>
       <td>Collin Morikawa E
@@ -1046,10 +1046,10 @@ E thru 16</td>
 +1 thru 14</td>
       <td>Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Patrick Reed +2
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
+      <td class="greyout">Patrick Reed +2
 +2 (F)</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -1078,22 +1078,22 @@ E thru 16</td>
 +1 thru 15</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Viktor Hovland +1
 +1 thru 15</td>
       <td>Jon Rahm +1
 +1 thru 15</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td>Jordan Spieth +2
-+2 thru 14</td>
+      <td>Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
