--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:57:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:57:55 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ body {
 -2 (F)</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Sam Burns +3
 +3 thru 17</td>
     </tr>
@@ -278,8 +278,8 @@ E thru 16</td>
 +1 thru 15</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -294,10 +294,10 @@ E thru 16</td>
 +1 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
+      <td class="greyout">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -306,14 +306,14 @@ E thru 16</td>
 -4 thru 16</td>
       <td>Patrick Cantlay -1
 -1 thru 15</td>
+      <td>Jordan Spieth(W) +1
++1 thru 15</td>
       <td>Viktor Hovland +1
 +1 thru 15</td>
-      <td>Brooks Koepka +1
+      <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td class="greyout">Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -342,10 +342,10 @@ E thru 17</td>
 E thru 16</td>
       <td>Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
+      <td class="greyout">Robert MacIntyre +1
 +1 (F)</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -358,22 +358,22 @@ E thru 16</td>
 E thru 16</td>
       <td>Jon Rahm(W) +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +1
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 15</td>
+      <td class="greyout">Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Jon Rahm +1
 +1 thru 15</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td>Jordan Spieth +2
-+2 thru 14</td>
+      <td>Jordan Spieth +1
++1 thru 15</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
