--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:58:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:59:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -148,10 +148,10 @@ body {
 -3 (F)</td>
       <td>Corey Conners -2
 -2 (F)</td>
-      <td>Xander Schauffele +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele +2
++2 thru 15</td>
       <td class="greyout">Sam Burns +3
 +3 thru 17</td>
     </tr>
@@ -232,24 +232,8 @@ E thru 16</td>
 E thru 14</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-4</td>
-      <td>Dustin Johnson -4
--4 thru 16</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Xander Schauffele(W) +1
-+1 thru 14</td>
-      <td>Russell Henley +1
-+1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas +4
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
+      <td class="greyout">Xander Schauffele +2
++2 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -276,11 +260,27 @@ E thru 16</td>
 -2 (F)</td>
       <td>Viktor Hovland +1
 +1 thru 15</td>
-      <td>Xander Schauffele +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele +2
++2 thru 15</td>
       <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson -4
+-4 thru 16</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Russell Henley +1
++1 (F)</td>
+      <td>Xander Schauffele(W) +2
++2 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas +4
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -290,14 +290,14 @@ E thru 16</td>
 -3 (F)</td>
       <td>Will Zalatoris -2
 -2 thru 16</td>
-      <td>Jon Rahm +1
-+1 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 15</td>
-      <td class="greyout">Shane Lowry +1
+      <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -312,8 +312,8 @@ E thru 16</td>
 +1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 15</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -324,10 +324,10 @@ E thru 16</td>
 -1 thru 15</td>
       <td>Tyrrell Hatton E
 E thru 17</td>
-      <td>Jon Rahm +1
-+1 thru 15</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 +1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 16</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -340,12 +340,12 @@ E thru 17</td>
 -1 (F)</td>
       <td>Collin Morikawa E
 E thru 16</td>
-      <td>Jon Rahm +1
+      <td>Jordan Spieth +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 15</td>
-      <td class="greyout">Robert MacIntyre +1
+      <td class="greyout leftborder">Robert MacIntyre +1
 +1 (F)</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -356,24 +356,24 @@ E thru 16</td>
 -1 (F)</td>
       <td>Collin Morikawa E
 E thru 16</td>
-      <td>Jon Rahm(W) +1
+      <td>Jordan Spieth +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 15</td>
-      <td class="greyout">Brooks Koepka +1
+      <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 14</td>
+      <td class="greyout">Jon Rahm(W) +2
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">3</td>
       <td>Corey Conners -2
 -2 (F)</td>
-      <td>Jon Rahm +1
-+1 thru 15</td>
-      <td>Xander Schauffele +1
-+1 thru 14</td>
       <td>Jordan Spieth +1
 +1 thru 15</td>
+      <td>Jon Rahm +2
++2 thru 16</td>
+      <td>Xander Schauffele +2
++2 thru 15</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -381,15 +381,15 @@ E thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Collin Morikawa E
 E thru 16</td>
       <td>Viktor Hovland(W) +1
 +1 thru 15</td>
-      <td>Jon Rahm +1
-+1 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 14</td>
+      <td>Jon Rahm +2
++2 thru 16</td>
       <td class="greyout leftborder">Patrick Reed +2
 +2 (F)</td>
       <td class="greyout">Luke List +5
