--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:08:07 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:08:50 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ body {
       <td>Jordan Spieth +1
 +1 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele +2
-+2 thru 15</td>
++2 thru 16</td>
       <td class="greyout">Sam Burns +3
 +3 thru 17</td>
     </tr>
@@ -172,116 +172,100 @@ body {
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-6</td>
-      <td>Sungjae Im -5
--5 (F)</td>
-      <td>Patrick Cantlay -2
--2 thru 16</td>
-      <td>Collin Morikawa E
-E thru 16</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 14</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Patrick Cantlay -2
--2 thru 16</td>
-      <td>Collin Morikawa E
-E thru 16</td>
-      <td>Rory McIlroy E
-E thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 14</td>
-      <td class="greyout">Xander Schauffele +2
-+2 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Joaquin Niemann -3
 -3 (F)</td>
+      <td>Viktor Hovland E
+E thru 16</td>
       <td>Rory McIlroy E
-E thru 14</td>
-      <td>Viktor Hovland +1
-+1 thru 15</td>
+E thru 15</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-6</td>
+      <td>Sungjae Im -5
+-5 (F)</td>
+      <td>Patrick Cantlay -2
+-2 thru 16</td>
+      <td>Viktor Hovland(W) E
+E thru 16</td>
+      <td>Collin Morikawa +1
++1 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 15</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Patrick Cantlay -2
+-2 thru 16</td>
+      <td>Rory McIlroy E
+E thru 15</td>
+      <td>Collin Morikawa +1
++1 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 15</td>
+      <td class="greyout">Xander Schauffele +2
++2 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Will Zalatoris -2
 -2 thru 16</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 14</td>
+      <td>Matthew Fitzpatrick E
+E thru 15</td>
       <td>Brooks Koepka +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-4</td>
-      <td>Will Zalatoris -2
--2 thru 16</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Collin Morikawa E
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Viktor Hovland E
 E thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 14</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td>Jordan Spieth +1
++1 thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele +2
++2 thru 16</td>
+      <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-4</td>
-      <td>Dustin Johnson -4
--4 thru 16</td>
+      <td>Dustin Johnson -3
+-3 thru 17</td>
       <td>Patrick Cantlay -2
 -2 thru 16</td>
+      <td>Viktor Hovland E
+E thru 16</td>
       <td>Jordan Spieth(W) +1
 +1 thru 15</td>
-      <td>Viktor Hovland +1
-+1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout">Jon Rahm +2
 +2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Viktor Hovland +1
-+1 thru 15</td>
-      <td>Jordan Spieth +1
-+1 thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-+2 thru 15</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -300,22 +284,6 @@ E thru 17</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson -4
--4 thru 16</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Russell Henley +1
-+1 (F)</td>
-      <td>Xander Schauffele(W) +2
-+2 thru 15</td>
-      <td class="greyout leftborder">Justin Thomas +4
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -3
@@ -323,7 +291,7 @@ E thru 17</td>
       <td>Will Zalatoris -2
 -2 thru 16</td>
       <td>Brooks Koepka +1
-+1 thru 14</td>
++1 thru 15</td>
       <td>Jordan Spieth +1
 +1 thru 15</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -332,30 +300,62 @@ E thru 17</td>
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-3</td>
+      <td>Will Zalatoris -2
+-2 thru 16</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Collin Morikawa +1
++1 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-2</td>
+      <td>Dustin Johnson -3
+-3 thru 17</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Russell Henley +1
++1 (F)</td>
+      <td>Xander Schauffele(W) +2
++2 thru 16</td>
+      <td class="greyout leftborder">Justin Thomas +4
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-1</td>
       <td>Patrick Cantlay -2
 -2 thru 16</td>
       <td>Tony Finau -1
 -1 (F)</td>
-      <td>Collin Morikawa E
-E thru 16</td>
+      <td>Collin Morikawa +1
++1 thru 17</td>
       <td>Jordan Spieth +1
 +1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout">Jon Rahm(W) +2
 +2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Corey Conners(W) -2
 -2 (F)</td>
       <td>Daniel Berger -1
 -1 (F)</td>
-      <td>Collin Morikawa E
-E thru 16</td>
+      <td>Collin Morikawa +1
++1 thru 17</td>
       <td>Jordan Spieth +1
 +1 thru 15</td>
       <td class="greyout leftborder">Robert MacIntyre +1
@@ -373,7 +373,7 @@ E thru 16</td>
       <td>Jon Rahm +2
 +2 thru 16</td>
       <td>Xander Schauffele +2
-+2 thru 15</td>
++2 thru 16</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -382,12 +382,12 @@ E thru 16</td>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">4</td>
-      <td>Collin Morikawa E
+      <td>Viktor Hovland(W) E
 E thru 16</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 15</td>
+      <td>Collin Morikawa +1
++1 thru 17</td>
       <td>Brooks Koepka +1
-+1 thru 14</td>
++1 thru 15</td>
       <td>Jon Rahm +2
 +2 thru 16</td>
       <td class="greyout leftborder">Patrick Reed +2
